prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web-app
  template:
    metadata:
      labels:
        app: web-app
        namespace: prod-ns 
    spec:
      containers:
      - name: web-app
        image: pujosn/web-app2:1.1.0
        resources:
          limits:
            memory: "100Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: storage-volume
          mountPath: "/data"

      volumes: 
      - name: storage-volume
        persistentVolumeClaim:
          claimName: pvc-prod
                


---
apiVersion: v1
kind: Service
metadata:
  name: service-prod
  namespace: prod-ns
spec:
  type: LoadBalancer
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
