staging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-staging
spec:
  selector:
    matchLabels:
      app: web-staging
  template:
    metadata:
      labels:
        app: web-staging
        namespace: staging-ns
    spec:
      containers:
      - name: web-staging
        image: pujosn/web-app2:1.1.0
        resources:
          limits:
            memory: "100Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: storage-volume
          mountPath: "/data"

      volumes: 
      - name: storage-volume
        persistentVolumeClaim:
          claimName: pvc-staging
       

---
apiVersion: v1
kind: Service
metadata:
  name: service-staging
  namespace: staging-ns
spec:
  type: LoadBalancer
  selector:
    app: web-staging
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
